--- a/package.json
+++ b/package.json
@@ -7,25 +7,81 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.6",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.10.2",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.13",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@types/express": "^4.16.1",
-    "@types/express-graphql": "^0.6.2",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/core": "^8.0.6",
+    "@nestjs/graphql": "^9.0.5",
+    "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/typeorm": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/graphql": "^14.0.7",
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
-    "graphql": "^14.1.1",
-    "graphql-tools": "^4.0.4"
+    "@types/uuid": "^8.3.1",
+    "apollo-server-express": "^3.3.0",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.6.0",
+    "graphql-tools": "^4.0.4",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.3.0",
+    "serverless-mysql": "^1.5.4",
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "tsc": "tsc",
-    "start": "npm run tsc && node ./build/index.js",
-    "start:prod": "npm run build && node ./build/index.js",
-    "start:dev": "nodemon"
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \\\"dist/**/*.ts\\\" \\\"test/**/*.ts\\\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "start:dev": "nodemon"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
