user's crud done and login with token handling in progress...

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ PORT=3000
 
 MYSQL_HOST="localhost"
 DB_NAME="hqdata"
-USERNAME="root"
-PASSWORD=""
-PORT= 3306
+USERNAME="leeniat"
+PASSWORD="12345678"
+PORT= 5432
