--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nestjs/testing": "^8.0.6",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^2.0.5",
     "@types/node": "^16.10.2",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
@@ -34,16 +36,23 @@
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/graphql": "^9.0.5",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/graphql": "^14.0.7",
+    "@types/lodash": "^4.14.175",
     "@types/uuid": "^8.3.1",
     "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
-    "graphql": "^15.6.0",
+    "graphql": "^15.6.1",
     "graphql-tools": "^4.0.4",
+    "lodash": "^4.17.21",
+    "luxon": "^2.0.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
